fleshed out navbar, auth and login working

--- a/flightlist/journal/templates/index.html
+++ b/flightlist/journal/templates/index.html
@@ -34,7 +34,7 @@
 
     <h2>Log in or register!</h2>
 
-    <p>Log in to see your journal.</p>
+    <p>Log in to see your FlightList.</p>
 
     {% endif %}
 
