--- a/flightlist/journal/templates/nav.html
+++ b/flightlist/journal/templates/nav.html
@@ -1,20 +1,17 @@
-<nav class="uk-navbar-container" uk-navbar>
+{% load staticfiles %}
+
+{% block nav %}
+
+{% if user.is_authenticated %}
+
+<nav class="uk-navbar-container uk-navbar">
 
     <div class="uk-navbar-left">
 
         <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="#">Active</a></li>
-            <li>
-                <a href="#">Parent</a>
-                <div class="uk-navbar-dropdown">
-                    <ul class="uk-nav uk-navbar-dropdown-nav">
-                        <li class="uk-active"><a href="#">Active</a></li>
-                        <li><a href="#">Item</a></li>
-                        <li><a href="#">Item</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li><a href="#">Item</a></li>
+            <li class=""><a href="#">Home</a></li>
+            <li><a href="#">Entries</a></li>
+            <li><a href="#">New Entry</a></li>
         </ul>
 
     </div>
@@ -22,20 +19,41 @@
     <div class="uk-navbar-right">
 
         <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="#">Active</a></li>
-            <li>
-                <a href="#">Parent</a>
-                <div class="uk-navbar-dropdown">
-                    <ul class="uk-nav uk-navbar-dropdown-nav">
-                        <li class="uk-active"><a href="#">Active</a></li>
-                        <li><a href="#">Item</a></li>
-                        <li><a href="#">Item</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li><a href="#">Item</a></li>
+            <li class=""><a href="{% url 'journal:logout' %}">Logout</a></li>
         </ul>
 
     </div>
 
 </nav>
+
+{% else %}
+
+<nav class="uk-navbar-container uk-navbar">
+
+    <div class="uk-navbar-left">
+
+        <div class="uk-navbar-item">
+            <a href="{% url 'journal:landing_page' %}">FlightList</a>
+        </div>
+
+        <ul class="uk-navbar-nav">
+            <li><a href="#">Entries</a></li>
+            <li><a href="#">New Entry</a></li>
+        </ul>
+
+    </div>
+
+    <div class="uk-navbar-right">
+
+        <ul class="uk-navbar-nav">
+            <li class=""><a href="{% url 'journal:login' %}">Login</a></li>
+            <li><a href="{% url 'journal:register' %}">Register</a></li>
+        </ul>
+
+    </div>
+
+</nav>
+
+{% endif %}
+
+{% endblock %}
