post new entry and list titles of entries working, fixed navbar

--- a/flightlist/journal/templates/nav.html
+++ b/flightlist/journal/templates/nav.html
@@ -9,9 +9,9 @@
     <div class="uk-navbar-left">
 
         <ul class="uk-navbar-nav">
-            <li class=""><a href="#">Home</a></li>
-            <li><a href="#">Entries</a></li>
-            <li><a href="#">New Entry</a></li>
+            <li class=""><a href="{% url 'journal:landing_page' %}">Home</a></li>
+            <li><a href="{% url 'journal:all_entries' user.id %}">Entries</a></li>
+            <li><a href="{% url 'journal:new_entry' user.id %}">New Entry</a></li>
         </ul>
 
     </div>
@@ -35,11 +35,6 @@
         <div class="uk-navbar-item">
             <a href="{% url 'journal:landing_page' %}">FlightList</a>
         </div>
-
-        <ul class="uk-navbar-nav">
-            <li><a href="#">Entries</a></li>
-            <li><a href="#">New Entry</a></li>
-        </ul>
 
     </div>
 
