--- a/flightlist/journal/templates/all_entries.html
+++ b/flightlist/journal/templates/all_entries.html
@@ -1,27 +1,101 @@
-{% extends "index.html" %}
-
-{% load staticfiles %}
-
-{% block content %}
+{% extends "index.html" %} {% load staticfiles %} {% block content %} 
 
 {% if all_entries %}
 
 <h2>Your FlightList Entries</h2>
 
+<div class="grid-x">
+
 {% for entry in all_entries %}
 
-<p>{{ entry.title }}</p>
+<div class="cell small-3">
+        <div class="card-user-profile">
+            <img
+                class="card-user-profile-img"
+                src={{entry.image}}
+            />
+            <div class="card-user-profile-content card-section">
+                <!-- <div class="card-user-profile-avatar">
+                    <img
+                        src="https://pbs.twimg.com/profile_images/422887689612820482/sZtHMJu5.png"
+                        alt="picture of yeti"
+                    />
+                </div> -->
+                <p class="card-user-profile-name">{{entry.title}}</p>
+                <p class="card-user-profile-status">{{entry.date}}</p>
+                <p class="card-user-profile-info">
+                    {{entry.content}}
+                </p>
+            </div>
+
+            <div class="card-user-profile-actions">
+                <a href="{% url 'journal:detail' entry.id %}" class="card-user-profile-button button hollow"
+                    >Details</a
+                >
+                <a
+                    href="#"
+                    class="card-user-profile-button button hollow secondary"
+                    >More Info</a
+                >
+            </div>
+        </div>
+    </div>
+
+
+<!-- <p>{{ entry.title }}</p>
 
 <p>
     <a href="{% url 'journal:detail' entry.id %}">Details</a>
-</p>
+</p> -->
 
 {% endfor %}
+
+</div>
+
+
+
+<!-- <div class="grid-x">
+    <div class="cell small-3">
+        <div class="card-user-profile">
+            <img
+                class="card-user-profile-img"
+                src="https://images.pexels.com/photos/5439/earth-space.jpg?h=350&auto=compress&cs=tinysrgb"
+                alt="picture of space"
+            />
+            <div class="card-user-profile-content card-section">
+                <div class="card-user-profile-avatar">
+                    <img
+                        src="https://pbs.twimg.com/profile_images/422887689612820482/sZtHMJu5.png"
+                        alt="picture of yeti"
+                    />
+                </div>
+                <p class="card-user-profile-name">Abominable Snowman</p>
+                <p class="card-user-profile-status">Yeti Web Designer</p>
+                <p class="card-user-profile-info">
+                    The Yeti, once better known as the Abominable Snowman, is a
+                    mysterious bipedal creature said to live in the mountains of
+                    Asia. It sometimes leaves tracks in snow, but is also said
+                    to dwell below the Himalayan snow line.
+                </p>
+            </div>
+
+            <div class="card-user-profile-actions">
+                <a href="#" class="card-user-profile-button button hollow"
+                    >Follow</a
+                >
+                <a
+                    href="#"
+                    class="card-user-profile-button button hollow secondary"
+                    >More Info</a
+                >
+            </div>
+        </div>
+    </div>
+    <div class="cell small-3">6 cells</div>
+</div> -->
 
 {% else %}
 
 <h2>You don't have any entries yet!</h2>
 
-{% endif %}
-
-{% endblock %}
+{% endif %} {% endblock %}
