--- a/flightlist/journal/templates/all_entries.html
+++ b/flightlist/journal/templates/all_entries.html
@@ -33,9 +33,9 @@
                     >Details</a
                 >
                 <a
-                    href="#"
+                    href="{% url 'journal:delete_entry' entry.id %}"
                     class="card-user-profile-button button hollow secondary"
-                    >More Info</a
+                    >Delete</a
                 >
             </div>
         </div>
