--- a/flightlist/journal/templates/all_entries.html
+++ b/flightlist/journal/templates/all_entries.html
@@ -15,12 +15,7 @@
                 src={{entry.image}}
             />
             <div class="card-user-profile-content card-section">
-                <!-- <div class="card-user-profile-avatar">
-                    <img
-                        src="https://pbs.twimg.com/profile_images/422887689612820482/sZtHMJu5.png"
-                        alt="picture of yeti"
-                    />
-                </div> -->
+
                 <p class="card-user-profile-name">{{entry.title}}</p>
                 <p class="card-user-profile-status">{{entry.date}}</p>
                 <p class="card-user-profile-info">
@@ -35,6 +30,7 @@
                 <a
                     href="{% url 'journal:delete_entry' entry.id %}"
                     class="card-user-profile-button button hollow secondary"
+                    onclick="return confirm('Are you sure?');"
                     >Delete</a
                 >
             </div>
@@ -42,57 +38,7 @@
     </div>
 
 
-<!-- <p>{{ entry.title }}</p>
-
-<p>
-    <a href="{% url 'journal:detail' entry.id %}">Details</a>
-</p> -->
-
 {% endfor %}
-
-</div>
-
-
-
-<!-- <div class="grid-x">
-    <div class="cell small-3">
-        <div class="card-user-profile">
-            <img
-                class="card-user-profile-img"
-                src="https://images.pexels.com/photos/5439/earth-space.jpg?h=350&auto=compress&cs=tinysrgb"
-                alt="picture of space"
-            />
-            <div class="card-user-profile-content card-section">
-                <div class="card-user-profile-avatar">
-                    <img
-                        src="https://pbs.twimg.com/profile_images/422887689612820482/sZtHMJu5.png"
-                        alt="picture of yeti"
-                    />
-                </div>
-                <p class="card-user-profile-name">Abominable Snowman</p>
-                <p class="card-user-profile-status">Yeti Web Designer</p>
-                <p class="card-user-profile-info">
-                    The Yeti, once better known as the Abominable Snowman, is a
-                    mysterious bipedal creature said to live in the mountains of
-                    Asia. It sometimes leaves tracks in snow, but is also said
-                    to dwell below the Himalayan snow line.
-                </p>
-            </div>
-
-            <div class="card-user-profile-actions">
-                <a href="#" class="card-user-profile-button button hollow"
-                    >Follow</a
-                >
-                <a
-                    href="#"
-                    class="card-user-profile-button button hollow secondary"
-                    >More Info</a
-                >
-            </div>
-        </div>
-    </div>
-    <div class="cell small-3">6 cells</div>
-</div> -->
 
 {% else %}
 
