--- a/flightlist/journal/templates/index.html
+++ b/flightlist/journal/templates/index.html
@@ -29,7 +29,10 @@
 
     <div class="">
         <h1>FlightList</h1>
-        <p class="blueboi">Hey there. You're logged in.</p>
+        <p class="">Hey there, welcome to FlightList. You're logged in and ready for takeoff.</p>
+        <!-- <img src="https://image.flaticon.com/icons/svg/61/61212.svg"> -->
+        <iframe src="https://giphy.com/embed/TgJ0KKEY8HByASy6Jt" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/world-travel-sky-TgJ0KKEY8HByASy6Jt"></a></p>
+        <p>FlightList is the premier location to record your journal entries about aviation.</p>
     </div>
 
     {% else %}
@@ -37,6 +40,10 @@
     <h1 class="">FlightList</h1>
 
     <h2>Log in or register to see your FlightList!</h2>
+
+    <!-- <img src="https://image.flaticon.com/icons/svg/61/61212.svg"> -->
+
+    <p>FlightList is the premier location to record your journal entries about aviation.</p>
 
     {% endif %}
 
